
syntax = "proto3";
package cacti.satp.v02;

import "cacti/satp/v02/common/message.proto";

message TransferProposalRequestMessage {
  cacti.satp.v02.common.CommonSatp common = 1;
  cacti.satp.v02.common.TransferClaims transfer_init_claims = 2;
  cacti.satp.v02.common.TransferClaimsFormat transfer_init_claims_format = 3;
  cacti.satp.v02.common.NetworkCapabilities network_capabilities = 4;
  bool multiple_claims_allowed = 5;
  bool multiple_cancels_allowed = 6;
}

message TransferProposalReceiptRejectMessage {
  cacti.satp.v02.common.CommonSatp common = 1;
  string hash_transfer_init_claims = 2;
  cacti.satp.v02.common.TransferClaims transfer_counter_claims = 3;
  string timestamp = 4;
}

message TransferCommenceRequestMessage {
  cacti.satp.v02.common.CommonSatp common = 1;
  string hash_transfer_init_claims = 2;
  string client_transfer_number = 3;
}

message TransferCommenceResponseMessage {
  cacti.satp.v02.common.CommonSatp common = 1;
}
  
service SatpStage1Service {
  rpc TransferProposal(TransferProposalRequestMessage) returns (TransferProposalReceiptRejectMessage) {}
  rpc TransferCommence(TransferCommenceRequestMessage) returns (TransferCommenceResponseMessage) {}
}
